# py-chat-websocket-demo

./: README.md  chat_app.db  main.py  pyproject.toml  requirements.txt
app/: auth.py  chat.py  database.py  main.py  models.py  rooms.py  services.py  users.py
public/: chat.js  index.html
